[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assests/SCRIPTS/TelaEscolhaPerson.gd" type="Script" id=1]
[ext_resource path="res://Assests/TELA HOME/FundoEscuro2.jpg" type="Texture" id=2]
[ext_resource path="res://Assests/FONTE/ka1.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assests/BOY/Idle (1).png" type="Texture" id=4]
[ext_resource path="res://Assests/BOTOES/Darvin.png" type="Texture" id=5]
[ext_resource path="res://Assests/GIRL/Idle (1).png" type="Texture" id=6]
[ext_resource path="res://Assests/BOTOES/Chelly.png" type="Texture" id=7]
[ext_resource path="res://Assests/SONS/jump1.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assests/SONS/Summer_Park.ogg" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 3 )

[node name="EsolhaPlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -244.0
margin_top = 65.0
margin_right = 244.0
custom_fonts/font = SubResource( 1 )
text = "Player 1"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -600.0
margin_right = 512.0

[node name="Boy" type="Node2D" parent="CenterContainer"]
position = Vector2( 52.45, 304.795 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="CenterContainer/Boy"]
position = Vector2( 767.175, 37.964 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="BtnBoy2" type="TouchScreenButton" parent="CenterContainer/Boy"]
position = Vector2( 573.097, 153.438 )
normal = ExtResource( 5 )

[node name="Girl" type="Node2D" parent="CenterContainer"]
position = Vector2( 7.2296, 304.794 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="CenterContainer/Girl"]
position = Vector2( 262.156, 30.251 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="BtnGirl2" type="TouchScreenButton" parent="CenterContainer/Girl"]
position = Vector2( 98.2844, 153.438 )
normal = ExtResource( 7 )

[node name="SoundClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="SoundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
[connection signal="pressed" from="CenterContainer/Boy/BtnBoy2" to="." method="_on_BtnBoy2_pressed"]
[connection signal="pressed" from="CenterContainer/Girl/BtnGirl2" to="." method="_on_BtnGirl2_pressed"]
